# ms-cluster-formula-search

./: .gitignore  README.md  process_data.py  pyproject.toml  search.py  search_formula.py
formula_search/: __init__.py  cli.py  constants.py  enumeration.py  formatting.py  mcp_server.py  search.py
tests/: __init__.py  test_cli.py  test_constants.py  test_enumeration.py  test_formatting.py  test_golden.py  test_integration.py  test_search.py
tests/fixtures/: expected_outputs.json
