[project]
name = "ms-cluster-formula-search"
version = "0.1.0"
description = "Mass spectrometry formula enumeration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
]

[project.scripts]
search-formula = "formula_search:main"
